# POS_SEMKA

./: CMakeLists.txt  main.cpp
User/: User.cpp  User.h
client/: Client.cpp  Client.h  main.cpp
databaza/: Databaza.cpp  Databaza.h
klient/: PrekladacKlient.cpp  PrekladacKlient.h  klient.cpp  klient.h  main.cpp  mainKlient.cpp
menu/: Menu.cpp  Menu.h
prekladac/: Prekladac.cpp  Prekladac.h
server/: PrekladacServer.cpp  PrekladacServer.h  Server.cpp  Server.h  main.cpp  mainServer.cpp
tabulka/: Tabulka.cpp  Tabulka.h
